<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#494949"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/vote_civilian"
            android:textSize="25dp"
            android:textColor="#FFFFFF"></TextView>

        <EditText
            android:id="@+id/main_custom_puzzle_et_civilian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"
            android:textColor="#00E0CB"
            android:textColorHint="#55FFFFFF"
            android:hint="@string/vote_btn_puzzles_result"
            ></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:textSize="25dp"
            android:text="@string/vote_spy"
            android:textColor="#FFFFFF"></TextView>

        <EditText
            android:id="@+id/main_custom_puzzle_et_spy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"
            android:textColor="#00E0CB"
            android:textColorHint="#55FFFFFF"
            android:hint="@string/vote_btn_puzzles_result"
            ></EditText>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/custom_puzzle_btn_save"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_name_dialog_btn_save"
            android:layout_margin="20dp"
            android:background="@drawable/btn_round_rectangle"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/custom_puzzle_btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_name_dialog_btn_cancel"
            android:layout_margin="20dp"
            android:background="@drawable/btn_round_rectangle"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>