<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#494949"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vote_tv_sure_to_kill_somebody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/vote_dialog_are_you_sure"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20dp"></TextView>

    </LinearLayout>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vote_btn_confirm_kill"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vote_dialog_confirm"
            android:layout_margin="20dp"
            android:background="@drawable/btn_round_rectangle"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/vote_btn_cancel_kill"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vote_dialog_cancel"
            android:layout_margin="20dp"
            android:background="@drawable/btn_round_rectangle"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>