<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494949"
    android:backgroundTintMode="add"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/main_title"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_player_number"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/main_tv_playerNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#00E0CB"
            android:textSize="18sp" />

    </LinearLayout>


        <SeekBar
            android:id="@+id/main_sb_playerNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:theme="@style/SCBSwitch" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_spy_number"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/main_tv_spyNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#00E0CB"
            android:textSize="18sp" />

        <Button
            android:id="@+id/main_btn_spyMinus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_round"
            android:text="-"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/main_btn_spyPlus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_round"
            android:text="+"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_civilian_number"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/main_tv_civilianNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#00E0CB"
            android:textSize="18sp" />

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="/"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="18sp" />-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/main_add_white_board"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/main_switch_addWB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:theme="@style/SCBSwitch" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_custom_player_names"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/main_switch_customNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:theme="@style/SCBSwitch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_custom_puzzles"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/main_switch_customPuzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:theme="@style/SCBSwitch" />

    </LinearLayout>

    <Button
        android:id="@+id/main_btn_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/btn_round_rectangle"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/main_start_game"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</LinearLayout>